# technical-test-stract

./: README.md  app.py  pyproject.toml
src/: api_endpoints.py  csv_generator.py  data_fetchers.py  error_handlers.py  exceptions.py  request_utils.py  settings.py
src/controlers/: root.py
src/controlers/geral/: all.py  summary.py
src/controlers/platform/: ads.py  summary.py
src/schemas/: __init__.py  account.py  field.py  insight.py  pagination.py
