[project]
name = "test-stract"
version = "0.1.0"
description = "Technical test for Stract Company"
authors = [
    {name = "Rodrigo Almeida"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
